fix stack size while calling fields